2.3.0/_sources/arcgis.gis.toc.rst.txt
arcgis.gis module
=================

.. automodule:: arcgis.gis

GIS
--------------
.. autoclass:: arcgis.gis.GIS
    :members:
    :undoc-members:

Item
---------------
.. autoclass:: arcgis.gis.Item
    :members:
    :undoc-members:
    :show-inheritance:

SharingManager
---------------
.. autoclass:: arcgis.gis._impl._content_manager.SharingManager
    :members:
    :undoc-members:
    :show-inheritance:

SharingGroupManager
-------------------
.. autoclass:: arcgis.gis._impl._content_manager.SharingGroupManager
    :members:
    :undoc-members:
    :show-inheritance:

ItemDependency
---------------
.. autoclass:: arcgis.gis.ItemDependency
    :members:
    :undoc-members:
    :show-inheritance:

User
--------------
.. autoclass:: arcgis.gis.User
    :members:
    :undoc-members:
    :show-inheritance:

Group
----------------
.. autoclass:: arcgis.gis.Group
    :members:
    :undoc-members:
    :show-inheritance:

Datastore
--------------------
.. autoclass:: arcgis.gis.Datastore
    :members:
    :undoc-members:
    :show-inheritance:

Role
--------------
.. autoclass:: arcgis.gis.Role
    :members:
    :undoc-members:
    :show-inheritance:

Layer
--------------
.. autoclass:: arcgis.gis.Layer
    :members:
    :undoc-members:
    :show-inheritance:

GroupApplication
----------------
.. autoclass:: arcgis.gis.GroupApplication
    :members:
    :undoc-members:
    :show-inheritance:

CategorySchemaManager
-------------------------
.. autoclass:: arcgis.gis.CategorySchemaManager
    :members:
    :undoc-members:

ContentManager
-------------------------
.. autoclass:: arcgis.gis.ContentManager
    :members:
    :undoc-members:
    
Folders
-------
.. autoclass:: arcgis.gis._impl._content_manager.Folders
    :members:
    :undoc-members:
    :show-inheritance:
    
Folder
------
.. autoclass:: arcgis.gis._impl._content_manager.Folder
    :members:
    :undoc-members:
    :show-inheritance:

UserManager
----------------------
.. autoclass:: arcgis.gis.UserManager
    :members:
    :undoc-members:
    :show-inheritance:

GroupManager
-----------------------
.. autoclass:: arcgis.gis.GroupManager
    :members:
    :undoc-members:
    :show-inheritance:

GroupMigrationManager
-----------------------
.. autoclass:: arcgis.gis.GroupMigrationManager
    :members:
    :undoc-members:
    :show-inheritance:

DatastoreManager
---------------------------
.. autoclass:: arcgis.gis.DatastoreManager
    :members:
    :undoc-members:
    :show-inheritance:

RoleManager
---------------------------
.. autoclass:: arcgis.gis.RoleManager
    :members:
    :undoc-members:
    :show-inheritance:

ResourceManager
---------------------------
.. autoclass:: arcgis.gis.ResourceManager
    :members:
    :undoc-members:
    :show-inheritance:

RecycleBin
---------------------------
.. autoclass:: arcgis.gis._impl._content_manager.RecycleBin
    :members:
    :undoc-members:
    :show-inheritance:

RecycleItem
---------------------------
.. autoclass:: arcgis.gis._impl._content_manager.RecycleItem
    :members:
    :undoc-members:
    :show-inheritance:

APIKeyManager
---------------------------
.. autoclass:: arcgis.gis._impl.APIKeyManager
    :members:
    :undoc-members:
    :show-inheritance:

APIKey
---------------------------
.. autoclass:: arcgis.gis._impl.APIKey
    :members:
    :undoc-members:
    :show-inheritance:

ProfileManager
---------------------------
.. autoclass:: arcgis.gis._impl._profile.ProfileManager
    :members:
    :undoc-members:
    :show-inheritance:

InvitationManager
---------------------------
.. autoclass:: arcgis.gis._impl._invitations.InvitationManager
    :members:
    :undoc-members:
    :show-inheritance:

CertificateManager
---------------------------
.. autoclass:: arcgis.gis._impl.CertificateManager
    :members:
    :undoc-members:
    :show-inheritance:

PortalDataStore
---------------------------
.. autoclass:: arcgis.gis._impl._datastores.PortalDataStore
    :members:
    :undoc-members:
    :show-inheritance:

StatusJob
---------------------------
.. autoclass:: arcgis.gis._impl._jb.StatusJob
    :members:
    :undoc-members:
    :show-inheritance:
    
MarketPlaceManager
------------------
.. autoclass:: arcgis.gis.sharing.MarketPlaceManager
    :members:
    :undoc-members:
    :show-inheritance:
    
ViewManager
------------------
.. autoclass:: arcgis.gis.ViewManager
    :members:
    :undoc-members:
    :show-inheritance:    

Enumerations
------------
ItemTypeEnum
^^^^^^^^^^^^
.. autoclass:: arcgis.gis._impl._dataclasses.ItemTypeEnum
    :members:
    :undoc-members:
    :show-inheritance:

MetadataFormatEnum
^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.gis._impl._dataclasses.MetadataFormatEnum
    :members:
    :undoc-members:
    :show-inheritance:

ServiceTypeEnum
^^^^^^^^^^^^^^^
.. autoclass:: arcgis.gis._impl._dataclasses.ServiceTypeEnum
    :members:
    :undoc-members:
    :show-inheritance:
    
SpatialRelationship
^^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.gis._impl._dataclasses.SpatialRelationship
    :members:
    :undoc-members:
    :show-inheritance:    

SharingLevel
^^^^^^^^^^^^
.. autoclass:: arcgis.gis._impl._content_manager.SharingLevel
    :members:
    :undoc-members:
    :show-inheritance:
    
Dataclasses
-----------
ItemProperties
^^^^^^^^^^^^^^
.. autoclass:: arcgis.gis._impl._dataclasses.ItemProperties
    :members:
    :undoc-members:
    :show-inheritance:

CreateServiceParameter
^^^^^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.gis._impl._dataclasses.CreateServiceParameter
    :members:
    :undoc-members:
    :show-inheritance:

ViewLayerDefParameter
^^^^^^^^^^^^^^^^^^^^^	
.. autoclass:: arcgis.gis._impl._dataclasses.ViewLayerDefParameter
    :members:
    :undoc-members:
    :show-inheritance:

SpatialFilter
^^^^^^^^^^^^^
.. autoclass:: arcgis.gis._impl._dataclasses.SpatialFilter
    :members:
    :undoc-members:
    :show-inheritance:
    
Submodules
--------------
.. toctree::
   :maxdepth: 3

   arcgis.gis.admin
   arcgis.gis.server
   arcgis.gis.agonb
   arcgis.gis.agoserver
   arcgis.gis.mission
   arcgis.gis.nb
   arcgis.gis.workflowmanager
   arcgis.gis.tasks
   arcgis.gis.sharing
